unpackaged/main/default/objects/Single_Barrel_Verification_Code__mdt/Single_Barrel_Verification_Code__mdt.object-meta.xml
<CustomObject>
    <description>This setting holds codes given out to the Innerworkings team to allow them to access a Salesforce site and upload a file that will update salesforce records</description>
    <label>Single Barrel Verification Code</label>
    <pluralLabel>Single Barrel Verification Codes</pluralLabel>
</CustomObject>