unpackaged/main/default/objects/Single_Barrel_Verification_Code__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>verification code given to an external party</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>